[package]
name = "arb-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.14", features = ["blocking", "json"]}
tokio = { version = "1.15.0", features = ["full"] }
tokio-tungstenite = "0.18.0"
serde = {version = "1.0.152", features = ["derive"]}
serde_json = "1.0.93"
serde_urlencoded = "0.7.1"
hmac = "0.12.1"
http = "0.2.9"
hex = "0.4.2"
sha2 = "0.10.6"
futures = "0.3.26"
websocket = "0.26.5"
